--- a/translations/inferno_devilish_plan.tex/pl.po
+++ b/translations/inferno_devilish_plan.tex/pl.po
@@ -36,6 +36,8 @@ msgid ""
 "Take the following Map tiles and arrange them as shown in the scenario map layout:\n"
 "\n"
 msgstr ""
+"Ułóż poniższe Kafelki Mapy zgodnie z układem pokazanym na mapie scenariusza:\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:59 coops/titans_stronghold.tex:62
@@ -110,15 +112,18 @@ msgid ""
 "\\resources{10}{0}{0}\n"
 "\n"
 msgstr ""
+"\\textbf{Początkowy Przychód:}\\par\n"
+"\\resources{10}{0}{0}\n"
+"\n"
 
 #. type: multicols*
 #: clash/the_hunt.tex:33 campaigns/inferno_devilish_plan.tex:41
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\textbf{Town Buildings:} \\svgunit{bronze} Dwelling, City Hall\n"
 "\n"
 msgstr ""
-"\\textbf{Budynki Początkowe:} Brak\n"
+"\\textbf{Budynki Początkowe:} \\svgunit{bronze} Siedlisko, Ratusz\n"
 "\n"
 
 #.  !TeX spellcheck = en_US
@@ -163,6 +168,12 @@ msgid ""
 "  The Kreegans are fierce warriors; they will relish the slaughter.}\n"
 "\n"
 msgstr ""
+"\\textit{Duża populacja elfów zamieszkuje południowo-wschodnie wybrzeże Erathii.\n"
+"  Zielone i złote smoki, rodzime dla tego regionu, wzmacniają ich siły zbrojne.\n"
+"  Zanim zdobędziemy ten region i skierujemy nasze siły do Steadwick, musimy unicestwić te smoki.\n"
+"  Nasi sojusznicy Kreeganie z Eeofol poprosili o zaszczyt wykonania tej misji.\n"
+"  Kreeganie to dzielni wojownicy; będą cieszyć się z rzezi.}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:18
@@ -173,6 +184,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Scenario length}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Długość Scenariusza}}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:20
@@ -193,6 +206,8 @@ msgid ""
 "\\textbf{Faction:} Inferno\n"
 "\n"
 msgstr ""
+"\\textbf{Frakcja:} Inferno\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:26
@@ -203,6 +218,13 @@ msgid ""
 "\\textbf{Faction Hero:} Choose any\n"
 "\n"
 msgstr ""
+"#-#-#-#-#  pl.po (Homm 3BG-mission-book)  #-#-#-#-#\n"
+"\\textbf{Dodatkowy Bonus:} Brak\n"
+"\n"
+"#-#-#-#-#  pl.po (Homm 3BG-mission-book)  #-#-#-#-#\n"
+"\\textbf{Bohater Frakcji:} Wybierz dowolnego\n"
+"\n"
+"#-#-#-#-#  pl.po (Homm 3BG-mission-book)  #-#-#-#-#\n"
 "\\textbf{Dodatkowy Bonus:} Brak\n"
 "\n"
 
@@ -228,6 +250,8 @@ msgid ""
 "\\textbf{Starting Units:}\n"
 "\n"
 msgstr ""
+"\\textbf{Jednostki początkowe:}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:39
@@ -239,6 +263,11 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\begin{itemize}\n"
+"  \\item Grupa Chowańców\n"
+"  \\item Garstka Magogów\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:50
@@ -252,6 +281,13 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{Bonus:} Wybierz jedną z następujących opcji:\n"
+"\\begin{itemize}\n"
+"  \\item Dodaj zaklęcie ,,Pogromca'' do swojej ręki\n"
+"  \\item Dodaj Artefakt ,,Zbroja Cudów'' do swojej ręki\n"
+"  \\item Wzmocnij Magogów i zyskaj 1 \\svg{valuables}\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:52
@@ -262,6 +298,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{AI hero setup}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Przygotiwanie Bohatera AI}}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:54
@@ -270,6 +308,8 @@ msgid ""
 "\\textbf{Faction:} Rampart\n"
 "\n"
 msgstr ""
+"\\textbf{Frakcja:} Bastion\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:56
@@ -278,6 +318,8 @@ msgid ""
 "\\textbf{Enemy Armies:}\n"
 "\n"
 msgstr ""
+"\\textbf{Armie Wroga:}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:61
@@ -289,6 +331,11 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\begin{itemize}\n"
+"  \\item \\textbf{Armia Złotych Smoków:} Grupa Złotych Smoków, Grupa Jednorożców, Grupa Dendroidów, Grupa Centaurów\n"
+"  \\item \\textbf{Armia Ivora:} Garstka Elfów\\footnote{W Rundzie 9, Garstka Elfów w Armii Ivara zostaje wzmocniona do Grupy.}, Neutralna Armia na tym samym poziomie co poziom Twojego Bohatera\\footnote{Zob. str. 35, ,,Tabela Trudności Pola'' w Księdze Zasad, aby uzyskać dalsze szczegóły na temat liczby Jednostek Neutralnych, które musisz dobrać dla tej Neutralnej Armii.}\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:63
@@ -297,6 +344,8 @@ msgid ""
 "\\textbf{Ivor's Deck:} 1 × Might card, 2 × Magic card, 1 × Skill card\n"
 "\n"
 msgstr ""
+"\\textbf{Talia Ivora:} 1 × Karta Mocy, 2 × Karta Magii, 1 × Karta Umiejętności\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:65
@@ -305,6 +354,8 @@ msgid ""
 "\\textbf{Ivor's Spell Deck:} 1 × Precision Spell card (it resolves on the first ranged unit able to make a ranged attack), 1 × Magic Arrow Spell card\n"
 "\n"
 msgstr ""
+"\\textbf{Talia Zaklęć Ivora:} 1 × Precyzja (działa na pierwszą jednostkę dystansową zdolną do wykonania ataku dystansowego), 1 × Magiczna Strzała\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:67
@@ -313,6 +364,8 @@ msgid ""
 "\\textbf{Ivor's Skill:} Archery Ability card (it always resolves its Basic effect)\n"
 "\n"
 msgstr ""
+"\\textbf{Zdolność Ivora:} Łucznictwo (zawsze wykonuj Podstawowy efekt)\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:69
