Experiment with untranslateable campaign

--- a/main_pl.tex
+++ b/main_pl.tex
@@ -6,7 +6,7 @@
 
 \def\sections{sections/translated/pl}
 \def\coopspath{coops/translated/pl}
-\def\coopstitle{Tryb Kooperacji}
+\def\coopstitle{Tryb Kooperacyjny}
 \def\clashpath{clash/translated/pl}
 \def\clashtitle{Tryb Starcia}
 \def\campaignspath{campaigns/translated/pl}
